--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "react-icons": "^4.2.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
