--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
     "client:build": "cd client && npm run build",
-    "intall-client": "cd client && npm install",
+    "install-client": "cd client && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
   },
   "author": "",
