--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "react-icons": "^4.2.0",
     "request": "^2.88.2"
